--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   }
