--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "react-multi-carousel": "^2.8.4",
     "uuid": "^9.0.1"
   }
 }
