--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.1"
   }
 }
