--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -28,6 +29,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "react-multi-carousel": "^2.8.4",
+    "swagger": "^0.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
   }
 }
