--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-scripts": "^5.0.1",
