--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,9 +2,8 @@
     "version": 2,
     "builds": [
         { 
-            "src": "package.json", 
+            "src": "*.js",
             "use": "@vercel/node" 
-          
         }
     ],
     "routes": [
