--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
