--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
+    "icons": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
